--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,12 @@
             android:layout_marginTop="@dimen/margin_wide"
             android:layout_marginEnd="@dimen/margin_wide"
             style="@style/WhiteBox"/>
+    <TextView
+            android:text="@string/box_two"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:id="@+id/box_two_text" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" style="@style/WhiteBox"/>
 
 </android.support.constraint.ConstraintLayout>
