--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,5 +56,21 @@
             app:layout_constraintStart_toEndOf="@+id/box_two_text"
             android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/label_text" android:fontFamily="@font/roboto"
+            android:textSize="24sp" android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/how_to_play" app:layout_constraintBaseline_toBaselineOf="@+id/info_text"/>
+    <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/info_text" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+            android:text="@string/tap_the_boxes_and_buttons"
+            app:layout_constraintStart_toEndOf="@+id/label_text"
+            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/box_two_text" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="0.011"/>
 
 </android.support.constraint.ConstraintLayout>
